--- a/src/views/recuperarContraseña.hbs
+++ b/src/views/recuperarContraseña.hbs
@@ -7,3 +7,14 @@
     <button>Enviar link a mi correo</button>
 
 </form>
+
+<h2>Reestablece contraseña</h2>
+
+<p style="color: red">{{error}}</p>
+<br>
+<p>Ingresa tu nueva constraseña</p>
+
+<form action="/api/sessions/reset-password?token={{token}}" method="post">
+    <input type="password" name="newPassword" placeholder="Ingresa tu nueva contraseña">
+    <button>Reestablecer Contraseña</button>
+</form>
